Implementing nice github wrapper for my repositories to make managing it all easy without lots of trees of nested dependencies. This would make it slow every time i made a change and cost lots of work

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,7 @@ backend/node_modules/strings
 node_modules/strings
 backend/node_modules/watchdog
 node_modules/watchdog
+backend/node_modules/tippler
+node_modules/tippler
+backend/node_modules/tippler_dns
+node_modules/tippler_dns
