--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
 	"description": "",
 	"main": "index.js",
 	"dependencies": {
+		"cache": "^1.0.0",
+		"core": "^1.0.0",
+		"enums": "^1.0.0",
+		"multimedia": "^1.0.0",
+		"interserver_communication": "^1.0.0",
+		"dal": "^1.0.0",
+		"strings": "^1.0.0",
 		"repositories_helper": "^1.0.0"
 	},
 	"devDependencies": {},
