--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "index.js",
 	"dependencies": {
 		"cache": "^1.0.0",
+		"client": "^1.0.0",
 		"core": "^1.0.0",
 		"enums": "^1.0.0",
 		"multimedia": "^1.0.0",
