--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-backend/node_modules/ainode_modules/aibackend/node_modules/cachenode_modules/cachebackend/node_modules/cdnnode_modules/cdnbackend/node_modules/clientnode_modules/clientbackend/node_modules/corenode_modules/corebackend/node_modules/dalnode_modules/dalbackend/node_modules/dnsnode_modules/dnsbackend/node_modules/enumsnode_modules/enumsbackend/node_modules/file_systemnode_modules/file_systembackend/node_modules/github_automationnode_modules/github_automationbackend/node_modules/godaddynode_modules/godaddybackend/node_modules/googlenode_modules/googlebackend/node_modules/helpersnode_modules/helpersbackend/node_modules/hostsnode_modules/hostsbackend/node_modules/interserver_communicationnode_modules/interserver_communicationbackend/node_modules/ipcnode_modules/ipcbackend/node_modules/lifecyclenode_modules/lifecyclebackend/node_modules/load_balancingnode_modules/load_balancingbackend/node_modules/lognode_modules/logbackend/node_modules/middlewarenode_modules/middlewarebackend/node_modules/multimedianode_modules/multimediabackend/node_modules/mysocketnode_modules/mysocketbackend/node_modules/pmsnode_modules/pmsbackend/node_modules/pornsitenode_modules/pornsitebackend/node_modules/precompilationnode_modules/precompilationbackend/node_modules/prerenderingnode_modules/prerenderingbackend/node_modules/quadtreenode_modules/quadtreebackend/node_modules/shutdownnode_modules/shutdownbackend/node_modules/spritesheetnode_modules/spritesheetbackend/node_modules/ssh2node_modules/ssh2backend/node_modules/stringsnode_modules/stringsbackend/node_modules/watchdognode_modules/watchdogbackend/node_modules/tipplernode_modules/tipplerbackend/node_modules/tippler_dnsnode_modules/tippler_dnsbackend/node_modules/.gitnode_modules/.gitbackend/node_modulesnode_modulesnode_modules/repositories_helper
 node_modules/cache
 node_modules/client
 node_modules/core
@@ -9,3 +8,11 @@ node_modules/multimedia
 node_modules/strings
 backend/node_modules
 node_modules
+backend/node_modules/cache
+backend/node_modules/client
+backend/node_modules/core
+backend/node_modules/dal
+backend/node_modules/enums
+backend/node_modules/interserver_communication
+backend/node_modules/multimedia
+backend/node_modules/strings
