creating e-net sign up page

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,19 @@ node_modules/strings
 backend/node_modules/strings
 backend/node_modules
 node_modules
+node_modules/shards
+backend/node_modules/shards
+node_modules/configuration
+backend/node_modules/configuration
+node_modules/hosts
+backend/node_modules/hosts
+node_modules/accounts
+backend/node_modules/accounts
+node_modules/authentication
+backend/node_modules/authentication
+node_modules/file_system
+backend/node_modules/file_system
+node_modules/file_transfer
+backend/node_modules/file_transfer
+node_modules/tags
+backend/node_modules/tags
